--- a/assets/scss/form.scss
+++ b/assets/scss/form.scss
@@ -24,6 +24,15 @@
       height: 2rem;
       border-radius: 50%;
     }
+    &:after {
+      content:'';
+      position: absolute;
+      left:.5rem;
+      top:50%;
+      width:1rem;
+      height:1rem;
+      transform: translateY(-50%);
+    }
   }
   input {
     display: none;
@@ -33,19 +42,28 @@
         border:1px solid #000;
       }
     }
-    &[type='radio']:checked + label:before {
+    &[type='radio']:checked + label:after {
       background: green;
-      border:1px solid green;
+      border-radius: 50%;
     }
     &[type='checkbox'] {
       + label:before {
         background-color: #fff;
         border:1px solid #000;
       }
+      + label:after {
+        left:.7rem;
+        width:.6rem;
+        height:.6rem;
+        margin-top:-.4rem;
+        border-right: 1px solid var(--normal);
+        border-bottom: 1px solid var(--normal);
+        transform: rotate(45deg);
+      }
     }
-    &[type='checkbox']:checked + label:before {
-        background: yellow;
-        border:1px solid yellow;
+    &[type='checkbox']:checked + label:after {
+      border-color:green;
+      border-width: 2px;
     }
     &[type='radio']:disabled + label,
     &[type='checkbox']:disabled + label {
@@ -180,6 +198,15 @@
       width: 2rem;
       height: 2rem;
     }
+    &:after {
+      content:'';
+      position: absolute;
+      left:2rem;
+      top:50%;
+      width:1rem;
+      height:1rem;
+      transform: translateY(-50%);
+    }
   }
   input {
     display: none;
@@ -189,19 +216,28 @@
         border:1px solid #000;
       }
     }
-    &[type='radio']:checked + label:before {
-        background-color: green;
-        border:1px solid green
+    &[type='radio']:checked + label:after {
+      background: green;
+      border-radius: 50%;
     }
     &[type='checkbox'] {
       + label:before {
         background-color: #fff;
         border:1px solid #000;
       }
+      + label:after {
+        left:2.2rem;
+        width:.6rem;
+        height:.6rem;
+        margin-top:-.4rem;
+        border-right: 1px solid var(--normal);
+        border-bottom: 1px solid var(--normal);
+        transform: rotate(45deg);
+      }
     }
-    &[type='checkbox']:checked + label:before {
-        background-color: yellow;
-        border:1px solid yellow
+    &[type='checkbox']:checked + label:after {
+      border-color:green;
+      border-width: 2px;
     }
     &[type='radio']:disabled + label,
     &[type='checkbox']:disabled + label {
@@ -241,6 +277,15 @@
       height: 2rem;
       margin-top: -1rem;
     }
+    &:after {
+      content:'';
+      position: absolute;
+      left:.5rem;
+      top:50%;
+      width:1rem;
+      height:1rem;
+      transform: translateY(-50%);
+    }
   }
   input {
     display: none;
@@ -250,19 +295,28 @@
         border:1px solid #000;
       }
     }
-    &[type='radio']:checked + label:before {
-        background-color: green;
-        border:1px solid green;
+    &[type='radio']:checked + label:after {
+      background: green;
+      border-radius: 50%;
     }
     &[type='checkbox'] {
       + label:before {
         background-color: #fff;
         border:1px solid #000;
       }
+      + label:after {
+        left:.7rem;
+        width:.6rem;
+        height:.6rem;
+        margin-top:-.4rem;
+        border-right: 1px solid var(--normal);
+        border-bottom: 1px solid var(--normal);
+        transform: rotate(45deg);
+      }
     }
-    &[type='checkbox']:checked + label:before {
-        background-color: yellow;
-        border:1px solid yellow;
+    &[type='checkbox']:checked + label:after {
+      border-color:green;
+      border-width: 2px;
     }
     &[type='radio']:disabled + label,
     &[type='checkbox']:disabled + label {
@@ -286,10 +340,19 @@
             background-color: #fff;
             border:1px solid #000;
         }
+        + label:after {
+          left:.7rem;
+          width:.6rem;
+          height:.6rem;
+          margin-top:-.4rem;
+          border-right: 1px solid var(--normal);
+          border-bottom: 1px solid var(--normal);
+          transform: rotate(45deg);
+        }
       }
-      &[type='radio']:checked + label:before {
-        background-color: yellow;
-        border:1px solid yellow;
+      &[type='checkbox']:checked + label:after {
+        border-color:green;
+        border-width: 2px;
       }
     }
   }
@@ -440,6 +503,19 @@
 /************************************* selectbox *************************************/
 .sel {
   display: inline-block;
+  position: relative;
+  &:after {
+    content:'';
+    position: absolute;
+    right:1rem;
+    top:50%;
+    width:0;
+    height:0;
+    border-top:5px solid black;
+    border-bottom:5px solid transparent;
+    border-left:5px solid transparent;
+    border-right:5px solid transparent;
+  }
   select {
     cursor: pointer;
     appearance: none;
@@ -450,6 +526,7 @@
     border-radius: 3px;
     font-size: 1.3rem;
     color: #1d1d1d;
+    
     // background: url(@/assets/images/common/select-arrow.svg) no-repeat right 1rem center/1.2rem 0.6rem;
     &.disabled {
       color: #bcbcbc;
@@ -564,11 +641,26 @@
   display: inline-block;
   position: relative;
   .btn-drop {
+    position: relative;
     width: 100%;
     height: 100%;
     cursor: pointer;
     .selected-option {
       color: #1d1d1d;
+    }
+    &:after {
+      content:'';
+      position: absolute;
+      right:.5rem;
+      top:50%;
+      width:0;
+      height:0;
+      margin-top:-.2rem;
+      border-right:4px solid transparent;
+      border-top:4px solid var(--normal);
+      border-left:4px solid transparent;
+      border-bottom:4px solid transparent;
+      transition: transform 0.3s;
     }
   }
   .option-drop {
@@ -621,6 +713,11 @@
     }
   }
   &.on {
+    .btn-drop {
+      &:after {
+        transform: rotate(180deg);
+      }
+    }
     .option-drop {
       display: block;
     }
@@ -656,16 +753,7 @@
       font-size: 1.2rem;
       color: #444;
       &:after {
-        content: '';
-        position: absolute;
-        right: 0;
-        top: 50%;
-        width: 2rem;
-        height: 2rem;
-        margin-top: -1rem;
-        // background: url(@/assets/images/common/select-arrow2.svg) no-repeat 0 0/2rem 2rem;
-        transform: rotate(180deg);
-        transition: transform 0.3s;
+        right:0;
       }
     }
     .option-drop {
@@ -684,13 +772,6 @@
             color: var(--baseColor);
             font-weight: 700;
           }
-        }
-      }
-    }
-    &.on {
-      .btn-drop {
-        &:after {
-          transform: rotate(0);
         }
       }
     }
@@ -1071,9 +1152,23 @@ div.tfarea {
     width: 3.4rem;
     height: 100%;
     cursor: pointer;
+    &:after {
+      content:'';
+      position: absolute;
+      top:50%;
+      right:1rem;
+      width:1rem;
+      height:1rem;
+      margin-top:-.5rem;
+      background-color: black;
+      opacity: .5;
+    }
     // background: url(@/assets/images/common/icon-view.svg) no-repeat 50% 50%/1.4rem auto;
     &.on {
     //   background-image: url(@/assets/images/common/icon-view-on.svg);
+      &:after {
+        opacity: 1;
+      }
     }
   }
 }
