--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -7,6 +7,40 @@
 --gray: #a5a5a5;
 }
 
+html,body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,img { margin:0; padding:0; -webkit-tap-highlight-color:rgba(0, 0, 0, 0); }
+html { width:100%; height:100%; }
+body,code { font-size:14px; font-family:'Noto Sans KR', 'Dotum', '돋움', 'arial', 'verdana', sans-serif; color:#333; background:#fff; -webkit-text-size-adjust:none; }
+ul,ol,dl,li { list-style:none; }
+img,fieldset { border:0; max-width:100%; vertical-align:top; }
+i,em,address { font-style:normal; }
+table { table-layout:fixed; width:100%; border:0; border-spacing:0; border-collapse:collapse; }
+table img { vertical-align:middle; }
+th,td { border:0; word-wrap:break-word; }
+input,select,textarea { font-size:14px; font-family:'Noto Sans KR', 'Dotum', '돋움', 'arial', 'verdana', sans-serif; color:#333;vertical-align:middle; -webkit-appearance:none; outline:0; -webkit-border-radius:0; }
+label { cursor:pointer; }
+caption { overflow:hidden; width:1px; font-size:1px; line-height:0; text-indent:150%; white-space:nowrap; }
+legend,.blind { display:block; overflow:hidden; position:absolute; font-size:1px; line-height:0; color:transparent; text-indent:-150%; white-space:nowrap; }
+hr.layout { display:none; }
+button { overflow:visible; padding:0; margin:0; border:0; outline:0; font-size:14px; font-family:'Noto Sans KR', 'Dotum', '돋움', 'arial', 'verdana', sans-serif; cursor:pointer; -webkit-user-select:none; background:transparent; } /* -webkit-user-select:none; 필요 없을시 삭제 */
+button::-moz-focus-inner { padding:0; border:0; }
+a { text-decoration:none; color:#333; }
+a:hover { text-decoration:underline; }
+
+/* placeholder */
+::-webkit-input-placeholder { color:#888; }
+:-ms-input-placeholder { color:#888; }
+::-moz-placeholder { color:#888; opacity:1; }
+:-moz-placeholder { color:#888; opacity:1; }
+
+/* drag */
+::selection { background:#7f7ce4; color:#fff; text-shadow:none; }
+::-moz-selection { background:#7f7ce4; color:#fff; text-shadow:none; }
+::-webkit-selection { background:#7f7ce4; color:#fff; text-shadow:none; }
+
+/* html5 */
+object,del,sub,var { margin:0; padding:0; }
+article,aside,details,figcaption,figure,footer,header,main,hgroup,menu,nav,section { display:block; }
+
 .hidden {
     position: absolute;
     overflow: hidden;
@@ -16,8 +50,8 @@
     margin: -1px;
     padding: 0;
     border: 0;
-  }
-  
+}
+
   caption {
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
